WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139476
Floats Don't Overhang Their Block Formatting Contex
https://bugs.webkit.org/show_bug.cgi?id=139476
Summary
Floats Don't Overhang Their Block Formatting Contex
Javier Fernandez
Reported
2014-12-10 03:50:40 PST
Floats Don't Overhang Their Block Formatting Context Per
http://www.w3.org/TR/CSS2/visuren.html#float-position
: "References to [the elements] in the [rules that govern the behaviour of floats] refer only to other elements in the same block formatting context as the float." This means we don't need to look for intruding or overhanging floats in boxes that establish a new block formatting context. I couldn't find a test where we failed this rule but we do appear to be doing unnecessary work in rebuildFloatsFromIntruding() so make sure we avoid adding floats from different block formatting contexts.
Attachments
Patch
(6.52 KB, patch)
2014-12-10 04:14 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2014-12-10 04:14:40 PST
Created
attachment 243007
[details]
Patch
Dave Hyatt
Comment 2
2014-12-15 12:26:35 PST
Comment on
attachment 243007
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-12-15 13:06:46 PST
Comment on
attachment 243007
[details]
Patch Clearing flags on attachment: 243007 Committed
r177308
: <
http://trac.webkit.org/changeset/177308
>
WebKit Commit Bot
Comment 4
2014-12-15 13:06:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug